--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,11 +1,16 @@
 <%= form_with(model: game) do |form| %>
-  <% if game.errors.any? %>
+  <% if game.errors.any? || game.game_players[0].errors.any? || game.game_players[1].errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(game.errors.count, "error") %> prohibited this game from being saved:</h2>
 
       <ul>
         <% game.errors.full_messages.each do |message| %>
           <li><%= message %></li>
+        <% end %>
+        <% game.game_players.each do |game_player| %>
+          <% game_player.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
         <% end %>
       </ul>
     </div>
